examples/test/testpolicy16290.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16290
  namespace: namespace318
spec:
  podSelector:
    matchLabels:
      key12: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value18
          key38: value14
          key18: value6
      podSelector:
        matchLabels:
          key28: value22
